Modificaciones para poner en producción

--- a/actividad2.html
+++ b/actividad2.html
@@ -6,7 +6,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Actividad 2</title>
         <link rel="stylesheet" type="text/css" href="./css/estiloActividad2.css" media="all" />
-        <script type="text/javascript" src="./node_modules/@fortawesome/fontawesome-free/js/all.js" defer></script>
+        <!-- <script type="text/javascript" src="./node_modules/@fortawesome/fontawesome-free/js/all.js" defer></script> -->
+        <script type="text/javascript" src="./all.js" defer></script>
         <script type="text/javascript" src="./js/actividad2.js"></script>
     </head>
     <body>
@@ -21,7 +22,6 @@
                         <source class="mp4" type="video/mp4" src="" />
                         <source class="mov" type="video/mov" src="" />
                         <source class="flv" type="video/flv" src="" />
-                        <track src="llevamemuylejos.vtt" kind="subtitles" srclang="es" label="Español" />
                         Su navegador no soporta la etiqueta Video.
                     </video>
                 </div>
